Replicating the bug of broken image.

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -43,5 +43,6 @@
   <body>
     <div id="root"></div>
     <div id="wilco"></div>
+    <img src="placeholder.png" alt="testing">
   </body>
 </html>
